RESOLVED FIXED121714
Scrollbars don't appear on long pages after r155660
https://bugs.webkit.org/show_bug.cgi?id=121714
Summary Scrollbars don't appear on long pages after r155660
Simon Fraser (smfr)
Reported 2013-09-20 14:07:37 PDT
Scrollbars don't appear on long pages after r155660
Attachments
Patch (12.21 KB, patch)
2013-09-20 14:13 PDT, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2013-09-20 14:13:41 PDT
Simon Fraser (smfr)
Comment 2 2013-09-20 14:13:46 PDT
Simon Fraser (smfr)
Comment 3 2013-09-20 14:47:29 PDT
Note You need to log in before you can comment on or make changes to this bug.