Source/WebCore/rendering/RenderLayerCompositor.h
@@ -235,6 +235,7 @@ public:
     void frameViewDidChangeLocation(const IntPoint& contentsOffset);
     void frameViewDidChangeSize();
     void frameViewDidScroll();
+    void frameViewDidAddOrRemoveScrollbars();
     void frameViewDidLayout();
     void rootFixedBackgroundsChanged();
 
